[tool.poetry]
name = "bat-ads"
version = "0.1.0"
description = ""
authors = ["ddot-bit"]
readme = "README.md"
packages = [{include = "bat_ads"}]

[tool.poetry.dependencies]
python = "^3.9"
botocore = "^1.22.10"
loguru = "^0.5.3"
boto3 = "^1.20.11"
fastapi = "^0.70.0"
launchdarkly-server-sdk = "^7.2.0"
mangum = "^0.12.3"
requests = "^2.26.0"
simplejson = "^3.17.6"
contextvars = "^2.4"
pytz = "^2019.3"
newrelic = "^7.4.0"
twilio = "^7.9.3"
logger = "^1.4"
aws-xray-sdk = "^2.10.0"
path = "^16.4.0"
pyrh = "^2.0.1"
python-dotenv = "^0.21.0"
pandas = "1.3.5"
jupyter = "^1.0.0"
pandas-datareader = "^0.10.0"
requests-cache = "^0.9.7"

[tool.poetry.dev-dependencies]
moto = "^2.2.16"
pytest = "^6.2.5"
pytest-html = "^3.1.1"
pytest-mock = "^3.6.1"
requests-mock = "^1.9.3"
coverage = "^6.1.2"
black = "^22.3.0"
poethepoet = "^0.10.0"
aws-cdk-lib = "^2.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
